--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "keywords": ["hubspot", "crm", "contacts", "deals", "activities"],
   "license": "MIT",
   "dependencies": {
-    "@hubspot/api-client": "^11.0.0",
-    "dotenv": "^16.4.5"
+    "@hubspot/api-client": "^11.0.0"
   }
 }
